--- a/templates/thread_list.html
+++ b/templates/thread_list.html
@@ -1,30 +1,45 @@
 {% extends "base.html" %}
 {% block content %}
+{% load custom_tags %}
 <div>
-    <div class="col-md-16">
-        <table class="table table-striped table-bordered table-hover table-condensed table-sm">
+    <div class="col-md-12">
+        <table class="table table-striped table-bordered table-hover table-condensed table-md">
             <thead class="thead-light">
-                <tr><th>No</th><th>タイトル</th><th>公開レベル</th><th>参加</th><th>作成者</th><th>作成日</th></tr>
+                <tr><th>No</th><th>タイトル</th><th>公開レベル</th><th>作成者</th><th>作成日</th><th>参加</th></tr>
             </thead>
             <tbody>
                 {% for thread in threads_list %}
                 <tr class="table-light">
-                    <th>{{thread.thread_no}}</th>
-                    {% if thread.open_level > 0 %}
-                    <th><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></th>
+                    <td>{{thread.thread_no}}</td>
+                    {# 閲覧レベルが非公開以外ならリンク表示 #}
+                    {% if thread.open_level != 0 %}
+                    <td class="col-md-3"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></td>
+                    {# 非公開でも、メンバーならリンク表示 #}
+                    {% elif thread.open_level == 0 and thread.threadmember_set|find_member_self:user %}
+                    <td class="col-md-3"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></td>
                     {% else %}
-                        <th>{{thread.thread_title}}</th>
+                    <td class="col-md-3">{{thread.thread_title}}</td>
                     {% endif %}
-                    <th>{{thread.display_open_level}}</th>
-                    <th>
-                    {% if thread.open_level < 2 %}
-                        <button type="button" class="btn btn-info">参加する</button>
+                    <td class="col-md-2" style="font-size:80%;">{{thread.display_open_level|safe}}</td>
+                    <td class="col-md-2">{{thread.display_create_user}}</td>
+                    <td class="col-md-2" style="font-size:70%;">{{thread.create_date}}</td>
+                    <td class="col-md-2">
+                    {# ログインしており、メンバーでなければボタン表示 #}
+                    {% if user.is_authenticated %}
+                        {% if not thread.threadmember_set|find_member_self:user %}
+                            <form action="{% url 'WGB:join_member' %}" method="post">
+                                {% csrf_token %}
+                                <span>参加パスワード</span><input type="password" name="password"/>
+                                <button type="submit" class="btn btn-info">参加する</button>
+                                <input type="hidden" name="thread_no" value="{{thread.thread_no}}">
+                            </form>
+                        {% else %}
+                            参加済
+                        {% endif %}
                     {% else %}
-                        -
+                        －
                     {% endif %}
-                    </th>
-                    <th>{{thread.display_create_user}}</th>
-                    <th>{{thread.create_date}}</th>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
