--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         {% else %}
             ゲスト
         {% endif %}
-        &nbsp;さん</span>
+        さん</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
