--- a/templates/show_message.html
+++ b/templates/show_message.html
@@ -16,7 +16,7 @@
                         <span>あて先：{{message.to_member.member.display_name}}さん</span>
                         <span style="font-size:80%; position:relative; left:20px;">{{message.send_datetime}}</span>
                     </div>
-                    <div class="card-text py-2" style="padding:10px;">{{message.message}}</div>
+                    <div class="card-text py-2" style="padding:10px;">{{message.message | safe | urlize | linebreaksbr}}</div>
                 </div>
             </div>
             <div class="card">
