--- a/templates/show_message.html
+++ b/templates/show_message.html
@@ -16,6 +16,13 @@
                         <span>あて先：{{message.to_member.member.display_name}}さん</span>
                         <span style="font-size:80%; position:relative; left:20px;">{{message.send_datetime}}</span>
                     </div>
+                    {% if message.directmessageattachment_set.all %}
+                    <div class="card-text py-2" style="padding:10px;">
+                        {% for attach in message.directmessageattachment_set.all %}
+                        <img src="{{ attach.attachment.url }}" />
+                        {% endfor %}
+                    </div>
+                    {% endif %}
                     <div class="card-text py-2" style="padding:10px;">{{message.message | safe | urlize | linebreaksbr}}</div>
                 </div>
             </div>
