--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>WorewolfGameBBS</title>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.structure.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.theme.min.css' %}" />
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" />
     <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jqueryui/js/jquery-ui.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     {% block script %}{% endblock %}
 </head>
