見栄えを除けば完成？
アルファ版として公開してよいか

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>WorewolfGameBBS</title>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/wgb.css' %}" />
     <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.min.css' %}" />
     <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.structure.min.css' %}" />
     <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.theme.min.css' %}" />
