・ユーザー登録時のアイコン登録がうまくいってなかったのを修正 ・掲示板作成時の１コ目入力欄に文字装飾や画像添付機能を付加

--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div>
-    <form action="{% url 'WGB:exe_create_user' %}" method="post">
+    <form action="{% url 'WGB:exe_create_user' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="col-md-8 offset-md-2">
             <div class="card">
