・掲示板参加者一覧の表示変更 ・掲示板一覧の作成者アイコン表示

--- a/templates/thread.html
+++ b/templates/thread.html
@@ -98,7 +98,7 @@
         {% endif %}
     </div>
     <div class="col-md-4">
-        <div class="card bg-light">
+        <div class="card  bg-primary text-light">
             <div class="card-body">
                 <div>参加メンバー</div>
                 {% for member in thread.threadmember_set.all %}
